--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
       <include src="./partials/about-us.html"></include>
     </div>
     <!-- menu -->
-    <div class="menu-page visually-hidden">
+    <div class="menu-page">
       <include src="./partials/hero2.html"></include>
       <include src="./partials/menu.html"></include>
     </div>
     <!-- contacts -->
-    <div class="contacts-page visually-hidden">aaa</div>
+    <div class="contacts-page"></div>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
