add menu page scss

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <!-- header -->
     <include src="./partials/header.html"></include>
     <!-- main -->
-    <div class="main-page">
+    <div class="main-page visually-hidden">
       <include src="./partials/hero.html"></include>
       <include src="./partials/special-offers.html"></include>
       <include src="./partials/about-us.html"></include>
@@ -30,7 +30,7 @@
       <include src="./partials/menu.html"></include>
     </div>
     <!-- contacts -->
-    <div class="contacts-page"></div>
+    <div class="contacts-page visually-hidden"></div>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
