add contacts page scss

--- a/src/index.html
+++ b/src/index.html
@@ -19,18 +19,21 @@
     <!-- header -->
     <include src="./partials/header.html"></include>
     <!-- main -->
-    <div class="main-page visually-hidden">
+    <div class="main-page">
       <include src="./partials/hero.html"></include>
       <include src="./partials/special-offers.html"></include>
       <include src="./partials/about-us.html"></include>
     </div>
     <!-- menu -->
-    <div class="menu-page">
+    <div class="menu-page visually-hidden">
       <include src="./partials/hero2.html"></include>
       <include src="./partials/menu.html"></include>
     </div>
     <!-- contacts -->
-    <div class="contacts-page visually-hidden"></div>
+    <div class="contacts-page visually-hidden">
+      <include src="./partials/hero3.html"></include>
+      <include src="./partials/location.html"></include>
+    </div>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
